# qt-cmake

./: CMakeLists.txt
source/: main.cpp
